--- a/app-user-view-account.html
+++ b/app-user-view-account.html
@@ -735,189 +735,232 @@
                   </div>
                   <div class="user-profile-header d-flex flex-column flex-sm-row text-sm-start text-center mb-4">
                     <div class="flex-shrink-0 mt-n2 mx-sm-0 mx-auto">
-                      <img src="assets/img/avatars/1.png" alt="user image" class="d-block h-auto ms-0 ms-sm-4 rounded user-profile-img" width="20%">
+                      <img src="assets/img/avatars/1.png" alt="user image"
+                        class="d-block h-auto ms-0 ms-sm-4 rounded user-profile-img" width="20%">
                     </div>
                     <div class="flex-grow-1 mt-3 mt-sm-5 ">
-                      <div class="d-flex align-items-md-end align-items-sm-start align-items-center justify-content-md-between justify-content-start mx-4 flex-md-row flex-column gap-4">
+                      <div
+                        class="d-flex align-items-md-end align-items-sm-start align-items-center justify-content-md-between justify-content-start mx-4 flex-md-row flex-column gap-4">
                         <div class="user-profile-info">
-                          <h4 class="fw-blod mb-3">Afzal</h4>
-                          <ul class="list-inline mb-0 d-flex align-items-center flex-wrap justify-content-sm-start justify-content-center gap-2">
+                          <!-- <h4 class="fw-blod mb-4">Afzal</h4> -->
+                          <ul
+                            class="list-inline mb-0 d-flex align-items-center flex-wrap justify-content-sm-start justify-content-center gap-2">
                             <li class="list-inline-item fs-5">
-                              <span class=" me-2">ID</span>
-                              <span class=" me-2">:</span>
-                              <span>8965#</span>
+                              <div class="user-info ">
+                                <h4 class="mb-2">Faizan Mati</h4>
+                                <span class="badge bg-label-secondary fw-bolder">Student</span>
+                              </div>
                             </li>
-                            <li class="list-inline-item fs-5">
-                              <span class=" me-2">Trade</span>
-                                <span class=" me-2">:</span>
-                                <span>Web Develement</span>
-                            </li>
-                            <li class="list-inline-item fs-5">
-                              <span class=" me-2">ID</span>
-                              <span class=" me-2">:</span>
-                              <span>8965#</span>
-                            </li>
-                           
                           </ul>
                         </div>
-                        <a href="javascript:void(0)" class="btn btn-primary text-nowrap d-none">
-                           <span class=" ">طالب علم</span>
-                        </a>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+
+            <div class="col-lg-8">
+
+              <!-- User Pills -->
+              <ul class="nav nav-pills flex-column flex-md-row">
+                <li class="nav-item"><a class="nav-link active" href="javascript:void(0);"><i
+                      class="bx bx-user me-1"></i>Profile</a></li>
+                <li class="nav-item"><a class="nav-link" href="app-user-view-security.html"><i
+                      class="bx bx-lock-alt me-1"></i>Attendance</a></li>
+                <li class="nav-item"><a class="nav-link" href="app-user-view-billing.html"><i
+                      class="bx bx-detail me-1"></i>Fees</a></li>
+                <li class="nav-item"><a class="nav-link" href="app-user-view-notifications.html"><i
+                      class="bx bx-bell me-1"></i>Exam</a></li>
+              </ul>
+              <!--/ User Pills -->
+            </div>
+          </div>
+
+          <div class="container">
             <div class="row">
               <!-- User Sidebar -->
-              <div class="col-xl-12 col-lg-5 col-md-5 order-1 order-md-0">
+              <div class="col-xl-12 col-lg-12 col-md-12 order-1 order-md-0">
                 <!-- User Card -->
                 <div class="card mb-4">
                   <div class="card-body">
-                    <div class="user-avatar-section">
-                      <div class=" d-flex flex-column">
-                        <img class="img-fluid rounded my-4" src="assets/img/pic/student1.png" height="110" width="110"
-                          alt="User avatar" />
-                        <div class="user-info ">
-                          <h4 class="mb-2">Faizan Mati</h4>
-                          <span class="badge bg-label-secondary fw-bolder">Student</span>
-                        </div>
-                      </div>
-                    </div>
-                    <h5 class="pb-2 border-bottom mb-4  mt-4">Details</h5>
+
+                    <h5 class="pb-2 border-bottom mb-4  mt-4">Student Details</h5>
                     <div class="container">
                       <div class="row">
-                        <div>
 
+                        <div class="col-lg-4 col-md-6 col-sm-12 ">
                           <div class="info-container">
                             <ul class="list-unstyled">
-                              <li class="mb-3 ">
+                              <li class="mb-4 ">
                                 <span class="fw-bold me-2">ID</span>
                                 <span class="fw-bold me-2">:</span>
                                 <span>8965#</span>
                               </li>
 
-                              <li class="mb-3 ">
+                              <li class="mb-4 ">
+                                <span class="fw-bold me-2">NAME</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>Faizan</span>
+                              </li>
+
+                              <li class="mb-4">
+                                <span class="fw-bold me-2 ">FATHER NAME</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>Matee Ur Rehmen </span>
+                              </li>
+
+                              <li class="mb-4 ">
+                                <span class="fw-bold me-2 ">GENDER</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>Male</span>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                          <div class="info-container">
+                            <ul class="list-unstyled">
+                              <li class="mb-4 ">
+                                <span class="fw-bold me-2">EMAIL</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>abc@gmail.com</span>
+                              </li>
+
+                              <li class="mb-4 ">
+                                <span class="fw-bold me-2">CNIC</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>31304-1410313-1</span>
+                              </li>
+
+                              <li class="mb-4">
+                                <span class="fw-bold me-2 ">PHONE NO </span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>(+92)3246745982</span>
+                              </li>
+
+                              <li class="mb-4 ">
+                                <span class="fw-bold me-2 ">PHONE NO 2</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>(+92)3246745982</span>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                          <div class="info-container">
+                            <ul class="list-unstyled">
+                              <li class="mb-4 ">
+                                <span class="fw-bold me-2">ADDRESS</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>korangi karachi</span>
+                              </li>
+
+                              <li class="mb-4 ">
+                                <span class="fw-bold me-2">DATE OF BIRTH</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>17/3/2001</span>
+                              </li>
+
+                              <li class="mb-4">
+                                <span class="fw-bold me-2 ">QUALIFICATION </span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>inter</span>
+                              </li>
+
+                              <li class="mb-4 ">
+                                <span class="fw-bold me-2 ">Status</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span class="badge bg-label-success">Drop</span>
+                              </li>
+
+                            </ul>
+                          </div>
+                        </div>
+
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container">
+            <div class="row">
+              <!-- User Sidebar -->
+              <div class="col-xl-12 col-lg-12 col-md-12 order-1 order-md-0">
+                <!-- User Card -->
+                <div class="card mb-4">
+                  <div class="card-body">
+
+                    <h5 class="pb-2 border-bottom mb-4  mt-4">Institute Details</h5>
+                    <div class="container">
+                      <div class="row">
+
+                        <div class="col-lg-6 col-md-12 col-sm-12">
+                          <div class="info-container">
+                            <ul class="list-unstyled">
+                              <li class="mb-4 ">
+                                <span class="fw-bold me-2">NAME</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>The Hunar Foundation</span>
+                              </li>
+
+                              <li class="mb-4 ">
                                 <span class="fw-bold me-2">Trade</span>
                                 <span class="fw-bold me-2">:</span>
                                 <span>Web Develement</span>
                               </li>
 
-                              <li class="mb-3">
-                                <span class="fw-bold me-2 ">Shift </span>
+                              <li class="mb-4">
+                                <span class="fw-bold me-2 ">CITY </span>
                                 <span class="fw-bold me-2">:</span>
-                                <span>evening</span>
+                                <span>karachi</span>
                               </li>
 
-                              <li class="mb-3 ">
-                                <span class="fw-bold me-2 ">Status</span>
-                                <span class="fw-bold me-2">:</span>
-                                <span class="badge bg-label-success">Drop</span>
-                              </li>
+                             
                             </ul>
-                            <!-- <div class="d-flex justify-content-center pt-3">
-                            <a href="javascript:;" class="btn btn-primary me-3" data-bs-target="#editUser" data-bs-toggle="modal">Edit</a>
-                            <a href="javascript:;" class="btn btn-label-danger suspend-user">Suspended</a>
-                          </div> -->
-
                           </div>
                         </div>
+                        <div class="col-lg-6 col-md-12 col-sm-12">
+                          <div class="info-container">
+                            <ul class="list-unstyled">
+                              <li class="mb-4 ">
+                                <span class="fw-bold me-2 ">SHIFT</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>Moring</span>
+                              </li>
+
+                              <li class="mb-4 ">
+                                <span class="fw-bold me-2">QAB</span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>Web Develement</span>
+                              </li>
+
+                              <li class="mb-4">
+                                <span class="fw-bold me-2 ">MARKITING CHANNEL </span>
+                                <span class="fw-bold me-2">:</span>
+                                <span>karachi</span>
+                              </li>
+
+                            </ul>
+                          </div>
+                        </div>
+
                       </div>
                     </div>
-
-                  </div>
-                </div>
-                <!-- /User Card -->
-                <!-- Plan Card -->
-
-                <!-- /Plan Card -->
-              </div>
-              <!--/ User Sidebar -->
-
-
-              <!-- User Content -->
-              <div class="col-lg-8">
-
-                <!-- User Pills -->
-                <ul class="nav nav-pills flex-column flex-md-row mb-3">
-                  <li class="nav-item"><a class="nav-link active" href="javascript:void(0);"><i
-                        class="bx bx-user me-1"></i>Account</a></li>
-                  <li class="nav-item"><a class="nav-link" href="app-user-view-security.html"><i
-                        class="bx bx-lock-alt me-1"></i>Security</a></li>
-                  <li class="nav-item"><a class="nav-link" href="app-user-view-billing.html"><i
-                        class="bx bx-detail me-1"></i>Billing & Plans</a></li>
-                  <li class="nav-item"><a class="nav-link" href="app-user-view-notifications.html"><i
-                        class="bx bx-bell me-1"></i>Notifications</a></li>
-                  <li class="nav-item"><a class="nav-link" href="app-user-view-connections.html"><i
-                        class="bx bx-link-alt me-1"></i>Connections</a></li>
-                </ul>
-                <!--/ User Pills -->
-
-
-                <div class="card">
-                  <div class="row mb-8">
-                    <div class="col-lg-4">
-                      <h5 class="card-header urdu-board">لاگ ان کریں</h5>
-                    </div>
-                    <div class="col-lg-5"></div>
-                    <div class="col-lg-3 mt-4 px-4 ">
-                      <select name="" id="" class="form-select urdu-select  fs-5 fw-bolder mb-4"
-                        data-allow-clear="true">
-                        <option value="" class="urdu-select-option  text-bg-primary">سلیکٹ کریں</option>
-                        <option value="" class="urdu-select-option ">لاگ ان دیٹا</option>
-                        <option value="" class="urdu-select-option">لاگ آؤٹ دیٹا </option>
-                      </select>
-                    </div>
-                    <!-- <div class="col-lg-1"></div> -->
-
-                  </div>
-                  <div class="table-responsive text-nowrap">
-                    <table class="table table-hover text-center" id="myTable">
-                      <thead>
-                        <tr class="table-border-top-1">
-                          <th class="inter_number" style="color: #696CFF;">#</th>
-                          <th class="urdu-menu" style="font-size: 16px; color: #696CFF;">تاریخ</th>
-                          <th class="urdu-menu" style="font-size: 18px; color: #696CFF;">ٹائم </th>
-                          <th class="urdu-menu" style="font-size: 18px; color: #696CFF;">ایڈریس</th>
-                          <th class="urdu-menu" style="font-size: 18px; color: #696CFF;">اسٹیٹس</th>
-
-                        </tr>
-                      </thead>
-                      <tbody class="table-border-bottom-0">
-                        <tr>
-                          <td class="inter" style="font-size: 16px;">1</td>
-                          <td class="urdu-menu" style="font-size: 16px;">01-27-2023</td>
-                          <td class="urdu-menu">12:20</td>
-                          <td class="urdu-menu">لانڈھی</td>
-                          <td class="urdu-menu" style="font-size: 16px;"><span class="raqam-No raqam">ناکام</span> </td>
-
-                          <!-- <td class="urdu-menu">---</td> -->
-
-                        </tr>
-
-                        <tr>
-                          <td class="inter" style="font-size: 16px;">1</td>
-                          <td class="urdu-menu" style="font-size: 16px;">01-27-2023</td>
-                          <td class="urdu-menu">12:20</td>
-                          <td class="urdu-menu">لانڈھی</td>
-                          <td class="urdu-menu" style="font-size: 16px;"><span class="raqam">کامیاب</span> </td>
-
-                          <!-- <td class="urdu-menu">---</td> -->
-
-                        </tr>
-
-
-
-                      </tbody>
-                    </table>
                   </div>
                 </div>
               </div>
-              <!--/ User Content -->
             </div>
           </div>
+
+          <!-- </div> -->
           <!-- / Content -->
+
           <!-- Footer -->
           <footer class="content-footer footer bg-footer-theme">
             <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
